@@ -1330,42 +1330,6 @@ public abstract class AbstractJhlClientAdapter extends AbstractClientAdapter {
 		}        
 	}
 
-    /* (non-Javadoc)
-     * @see org.tigris.subversion.svnclientadapter.ISVNClientAdapter#getRepositoryRoot(org.tigris.subversion.svnclientadapter.SVNUrl)
-     */
-    public SVNUrl getRepositoryRoot(SVNUrl url) {
-        return null;
-        
-        // the following only works for file:/// urls
-/*    	String target = url.toString()+"/FILEWHICHDOESNOTEXIST";
-    	try {
-            // revision is not important because the repository root
-            // is always the same 
-            svnClient.logMessages(
-                            target, 
-                            JhlConverter.convert(SVNRevision.HEAD), 
-                            JhlConverter.convert(SVNRevision.HEAD),
-                            false,  // don't stop on copy
-                            true); // discover paths
-            return null;
-        } catch (ClientException e) {
-            // Filesystem has no item
-            // svn: File not found: revision 1, path '/entryTest/FILEWHICHDOESNOTEXIST'
-        	e.getMessage();
-            RE re = new RE("path '(.+)'");
-            if (re.match(e.getMessage())) {
-            	String path = re.getParen(1);
-            	try {
-					return new SVNUrl(target.substring(0,target.length()-path.length()));
-				} catch (MalformedURLException e1) {
-					return null;
-				}
-            } else {
-            	return null;
-            }
-        }*/        
-    }
-
     /*
      * (non-Javadoc)
      * @see org.tigris.subversion.svnclientadapter.ISVNClientAdapter#switchUrl(org.tigris.subversion.svnclientadapter.SVNUrl, java.io.File, org.tigris.subversion.svnclientadapter.SVNRevision, boolean)
